<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:layout_marginBottom="4dp"
              android:layout_marginStart="6dp"
              android:layout_marginEnd="6dp"
              android:orientation="horizontal"
              android:baselineAligned="false">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

        <TextView
                android:id="@+id/txt_label_face_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/txt_list_item_face_id"
                android:textStyle="bold"
                android:textSize="18sp"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_smile_probability"/>

        <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_right_eye_open_prob"/>

        <TextView
                android:id="@+id/txtView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_left_eye_open_prob"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

        <TextView
                android:id="@+id/txt_itemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"
                android:text="@string/txt_list_item_default"/>

        <TextView
                android:id="@+id/txt_smile_prob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_default"/>

        <TextView
                android:id="@+id/txt_right_eye_open_prob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_default"/>

        <TextView
                android:id="@+id/txt_left_eye_open_prob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list_item_default"/>


    </LinearLayout>

</LinearLayout>
